Fixing annoying styling that was creating jumping on edit

--- a/src/admin/components/editLine/editLine.pcss
+++ b/src/admin/components/editLine/editLine.pcss
@@ -5,7 +5,11 @@
     pointer-events: none;
   }
 }
-
+.text {
+  padding: 0.625rem 0;
+  border-bottom: 1px solid transparent;
+  line-height: 1.15;
+}
 .title {
   display: flex;
   align-items: center;
