--- a/src/admin/components/skill/skill.pcss
+++ b/src/admin/components/skill/skill.pcss
@@ -18,19 +18,23 @@
   align-content: center;
 }
 .name {
-
+  padding: 0.625rem 0;
+  border-bottom: 1px solid transparent;
+  line-height: 1.15;
 }
 
 .value {
   width: 4rem;
-  
+  padding: 0.625rem 0;
+  border-bottom: 1px solid transparent;
+  line-height: 1.15;
 }
 .value-input {
   &:after {
     content: "%";
     display: block;
     position: absolute;
-    top: 0.5625rem;
+    top: 0.5rem;
     right: 1.2rem;
   }
 }
